--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
               Work Email <span class="required">*</span>
             </label>
             <div class="field-help">
-              Please use your work email (@ashleyfurniture.com).
+              Please enter your Ashley work email (@ashleyfurniture.com).
             </div>
             <input
               type="email"
@@ -933,7 +933,7 @@
               Current Department <span class="required">*</span>
             </label>
             <div class="field-help">
-              Select the department you are currently assigned to (data loaded from roles_master.csv).
+             Please select your current department.
             </div>
             <select id="currentDept" name="currentDept">
               <option value="">-- Select department --</option>
