--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
 }
 
 .msform-link.pulse {
-  animation: step2Pulse 1.1s ease-out 7; /* pulse 7 lần */
+  animation: step2Pulse 1.1s ease-out 10; /* pulse 10 lần */
 }
 
 /* luôn giữ viền sáng khi unlocked (kể cả sau khi pulse xong) */
@@ -920,7 +920,14 @@
   <div class="page">
     <!-- HEADER -->
     <div class="card header-orange">
-      <img src="assets/logo.png" alt="Ashley Logo" class="header-logo-big">
+<img
+  src="assets/logo.png"
+  alt="Ashley Logo"
+  class="header-logo-big"
+  id="secretSampleLogo"
+  style="cursor:pointer;"
+  title=""
+/>
 
       <div class="header-main">
         <div class="page-title">Candidate Profile Builder</div>
@@ -1283,26 +1290,27 @@
           <div id="err-motivation" class="field-error"></div>
         </div>
 
-        <div class="field">
-          <label class="field-label">
-            Willingness to Change Department <span class="required">*</span>
-          </label>
-          <div class="radio-row">
-            <label class="radio-item">
-              <input type="radio" name="changeDept" value="yes" />
-              Yes
-            </label>
-            <label class="radio-item">
-              <input type="radio" name="changeDept" value="maybe" />
-              Maybe / Depends on role
-            </label>
-            <label class="radio-item">
-              <input type="radio" name="changeDept" value="no" />
-              No
-            </label>
-          </div>
-          <div id="err-changeDept" class="field-error"></div>
-        </div>
+<div class="field" id="changeDeptWrap">
+  <label class="field-label">
+    Willingness to Change Department <span class="required">*</span>
+  </label>
+  <div class="radio-row">
+    <label class="radio-item">
+      <input type="radio" name="changeDept" value="yes" />
+      Yes
+    </label>
+    <label class="radio-item">
+      <input type="radio" name="changeDept" value="maybe" />
+      Maybe / Depends on role
+    </label>
+    <label class="radio-item">
+      <input type="radio" name="changeDept" value="no" />
+      No
+    </label>
+  </div>
+  <div id="err-changeDept" class="field-error"></div>
+</div>
+
 
       </section>
 
@@ -1635,28 +1643,6 @@
       </div>
     </div>
 
-    <!-- JSON PREVIEW / DEBUG -->
-    <div class="card">
-      <h2 class="section-title">
-        <span class="section-badge">Debug</span>
-        Data Preview (for Testing)
-      </h2>
-      <p class="section-desc">
-        This section is for testing only. It shows the final JSON payload that is used to generate your Excel & PDF files.
-      </p>
-
-      <div style="margin-bottom:10px;">
-        <button id="loadSampleBtn" type="button" class="btn btn-secondary">
-          🔄 Load Sample Data
-        </button>
-      </div>
-
-      <div id="jsonOutput" class="json-output">
-        <strong>Waiting for submission…</strong>
-      </div>
-    </div>
-  </div>
-
   <script>
       function $(id) {
       return document.getElementById(id);
@@ -1718,10 +1704,11 @@ function unlockMsFormLink() {
   link.classList.remove("locked");
   link.classList.add("unlocked");
   link.setAttribute("aria-disabled", "false");
+  link.removeAttribute("tabindex"); // ✅ cho tab lại
   link.innerHTML = "➡ Step 2/2 – Open Microsoft Forms Application";
 
   try { localStorage.setItem(MSFORM_UNLOCK_KEY, "1"); } catch (e) {}
-  pulseStep2Link(7, 1100);
+  pulseStep2Link(10, 1100);
 }
 
 function lockMsFormLink() {
@@ -1731,10 +1718,12 @@ function lockMsFormLink() {
   link.classList.remove("unlocked");
   link.classList.add("locked");
   link.setAttribute("aria-disabled", "true");
+  link.setAttribute("tabindex", "-1"); // ✅ khóa tab
   link.innerHTML = "🔒 Step 2 – Open Microsoft Forms Application";
 
   try { localStorage.removeItem(MSFORM_UNLOCK_KEY); } catch (e) {}
 }
+
 
     // ===============================
     // CONFIG · CSV & STORAGE
@@ -2065,10 +2054,6 @@ function findRoleIdByTitle(title) {
 
       updateRoleDependentUI();
       saveFormToLocalStorage();
-
-      alert(
-        "Sample data loaded! Now you can click Generate Candidate Profile and it should pass all validations."
-      );
     }
 
     // ===============================
@@ -2246,12 +2231,16 @@ function findRoleIdByTitle(title) {
       }
 
       // Mobility
-      const changeDept = getRadioValue("changeDept");
-      if (!changeDept) {
-        $("err-changeDept").textContent =
-          "Please indicate your willingness to change department.";
-        hasError = true;
-      }
+const changeDept = getRadioValue("changeDept");
+if (!changeDept) {
+  $("err-changeDept").textContent =
+    "Please indicate your willingness to change department.";
+  $("changeDeptWrap").classList.add("has-error");
+  hasError = true;
+} else {
+  $("err-changeDept").textContent = "";
+  $("changeDeptWrap").classList.remove("has-error");
+}
 
       // Consents
       let consErr = "";
@@ -2342,10 +2331,11 @@ function findRoleIdByTitle(title) {
       return payload;
     }
 
-    function showJsonPreview(payload) {
-      const el = $("jsonOutput");
-      el.textContent = JSON.stringify(payload, null, 2);
-    }
+function showJsonPreview(payload) {
+  const el = $("jsonOutput");
+  if (!el) return;
+  el.textContent = JSON.stringify(payload, null, 2);
+}
 
     // ===============================
     // PROFILE CARD POPULATION
@@ -2642,13 +2632,42 @@ $("crossNotice").style.display = anyCross ? "inline-block" : "none";
 	  restoreFormFromLocalStorage();
 	  updateRoleDependentUI();
 	  
-try {
-  if (localStorage.getItem(MSFORM_UNLOCK_KEY) === "1") unlockMsFormLink();
-  else lockMsFormLink();
-} catch (e) {
-  lockMsFormLink();
+	  // ✅ CHÈN ĐOẠN “CLICK LOGO LOAD SAMPLE” NGAY Ở ĐÂY
+const secretLogo = $("secretSampleLogo");
+if (secretLogo) {
+  let clickCount = 0;
+  let clickTimer = null;
+
+  const RESET_MS = 900; // mỗi click phải cách nhau <= 900ms
+
+  secretLogo.addEventListener("click", function () {
+    clickCount++;
+
+    // reset timer mỗi lần click
+    if (clickTimer) clearTimeout(clickTimer);
+    clickTimer = setTimeout(() => {
+      clickCount = 0;
+      clickTimer = null;
+    }, RESET_MS);
+
+    // đủ 3 click trong thời gian yêu cầu -> load sample
+    if (clickCount === 3) {
+      clickCount = 0;
+      if (clickTimer) clearTimeout(clickTimer);
+      clickTimer = null;
+
+      loadSampleData();
+      // không show toast / không hint
+    }
+  });
 }
 
+  try {
+    if (localStorage.getItem(MSFORM_UNLOCK_KEY) === "1") unlockMsFormLink();
+    else lockMsFormLink();
+  } catch (e) {
+    lockMsFormLink();
+  }
 
       // Auto-format Employee ID (digits only, pad to 4 on blur)
       $("employeeId").addEventListener("input", function () {
@@ -2720,11 +2739,6 @@ try {
       $("applicationForm").addEventListener("input", saveFormToLocalStorage);
       $("applicationForm").addEventListener("change", saveFormToLocalStorage);
 
-      // Sample loader
-      $("loadSampleBtn").addEventListener("click", function () {
-        loadSampleData();
-      });
-
       // Form submit
       $("applicationForm").addEventListener("submit", function (e) {
         e.preventDefault();
@@ -2750,8 +2764,7 @@ try {
       // Reset
       $("btnReset").addEventListener("click", function () {
         clearAllErrors();
-        $("jsonOutput").innerHTML =
-          "<strong>Waiting for submission…</strong>";
+        $("jsonOutput").textContent = "Waiting for submission…";
         $("successMessage").style.display = "none";
         lastPayload = null;
         clearLocalStorageData();
@@ -2855,7 +2868,8 @@ $("msFormLink").addEventListener("click", function () {
     <span id="toastIcon" class="toast-icon">✅</span>
     <span id="toastText">Step 2 link is now unlocked.</span>
   </div>
-</div>
-
+  </div>
+  <!-- Hidden debug output (kept for internal use, not visible to candidates) -->
+<pre id="jsonOutput" style="display:none;"></pre>
 </body>
 </html>
