--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
 }
 
 .msform-link.pulse {
-  animation: step2Pulse 1.1s ease-out 10; /* pulse 10 lần */
+  animation: step2Pulse 1.1s ease-out 100; /* pulse 100 lần */
 }
 
 /* luôn giữ viền sáng khi unlocked (kể cả sau khi pulse xong) */
@@ -867,14 +867,15 @@
 
 	
 	/* Locked state */
-	.msform-link.locked {
-	  background: #fef3c7;
-	  color: #9a3412;
-	  opacity: 0.6;
-	  pointer-events: none;
-	  cursor: not-allowed;
-	}
-	
+.msform-link.locked {
+  background: #fef3c7;
+  color: #9a3412;
+  opacity: 0.6;
+  pointer-events: none;
+  cursor: not-allowed;
+  animation: none !important; /* ✅ locked là không nháy */
+}
+
 	/* Unlocked state */	
 	.msform-link.unlocked:hover {
 	  transform: translateY(-1px);
@@ -1658,6 +1659,8 @@
         .replace(/'/g, "&#039;");
     }
 let toastTimer = null;
+let pulseTimer = null;
+
 
 function showToast(message, type = "success", duration = 2800) {
   const toast = $("microToast");
@@ -1685,14 +1688,23 @@ function pulseStep2Link(times = 100, durationMs = 1100) {
   const link = $("msFormLink");
   if (!link) return;
 
+  // Nếu đang locked thì tuyệt đối không pulse
+  if (link.classList.contains("locked")) return;
+
+  // Clear timer cũ (nếu trước đó đang pulse)
+  if (pulseTimer) clearTimeout(pulseTimer);
+
   // reset để chạy lại được
   link.classList.remove("pulse");
-  void link.offsetWidth;
+  void link.offsetWidth; // reflow trick
   link.classList.add("pulse");
 
-  // sau khi pulse xong -> remove pulse (nhưng unlocked vẫn giữ glow)
+  // Sau khi pulse xong -> remove pulse
   const total = times * durationMs;
-  setTimeout(() => link.classList.remove("pulse"), total + 80);
+  pulseTimer = setTimeout(() => {
+    link.classList.remove("pulse");
+    pulseTimer = null;
+  }, total + 80);
 }
 
 
@@ -1715,10 +1727,17 @@ function lockMsFormLink() {
   const link = $("msFormLink");
   if (!link) return;
 
+  // ✅ DỪNG NHÁY NGAY LẬP TỨC khi lock
+  link.classList.remove("pulse");
+  if (pulseTimer) {
+    clearTimeout(pulseTimer);
+    pulseTimer = null;
+  }
+
   link.classList.remove("unlocked");
   link.classList.add("locked");
   link.setAttribute("aria-disabled", "true");
-  link.setAttribute("tabindex", "-1"); // ✅ khóa tab
+  link.setAttribute("tabindex", "-1");
   link.innerHTML = "🔒 Step 2 – Open Microsoft Forms Application";
 
   try { localStorage.removeItem(MSFORM_UNLOCK_KEY); } catch (e) {}
